Make async request to server and render server validation

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -11,11 +12,11 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1",
-    "validator": "^10.11.0",
-    "redux-devtools-extension": "^2.13.8"
+    "validator": "^10.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,5 +49,6 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.13.0",
     "prettier": "^1.17.0"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
