--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1",
@@ -48,7 +47,8 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.13.0",
-    "prettier": "^1.17.0"
+    "prettier": "^1.17.0",
+    "redux-devtools-extension": "^2.13.8"
   },
   "proxy": "http://localhost:8080"
 }
